School_projects/SecondYear_projects/Java_programming/Java_compiler/src/test/deca/context/invalid/OwnTests_stepB/invalid/tests_If_While/wrongCondition_IF.deca
//test d'une condition qui n'est pas un bool dans un if
//erreur attendue : int is not a valid condition for IfThenElse

{
    if(10){
        println("salut");
    }
}